# NestForge

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  BACKLOG.md  BUILD.md  DESIGN.md  PARALLEL.md  PREDICTIVE.md  README.md  conftest.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  experiments.yml
docs/: AGENTIC_OPTIMIZER_DESIGN.md  FP_PRECISION_LEVELS.md  FP_RISK.md  GPU_EXTENSION_FUTURE.md  KNOWN_FAILURES.md  MEGAKERNEL_TODO.md  OPT_RECORDS.md  PLAN_optimize_contract.md
docs/agentic_optimizer/: README.md
docs/kernel_surface/: README.md
docs/paper/: DEEP_RESEARCH_fp_aware_cross_compiler_vectorization.md  EXPERIMENT_frontend_semantics_gap.md  RANKED_BIBLIOGRAPHY.md  README.md  RELATED_WORK_cross_language_semantic_lifting.md  RELATED_WORK_offload_fp_arena.md
docs/predictive/: README.md
examples/: demo_fma.py  demo_gramschmidt_fma.py
nestforge/: __init__.py  arena.py  baselines.py  build.py  corpus.py  device_profile.py  differential.py  emit_libnode.py  emit_numpy.py  emit_yaml.py  entry.py  experiment_e1.py  experiment_e2.py  experiment_e3.py  experiment_e4.py  experiment_e5.py  extract.py  feedback.py  fission_arms.py  fusion.py  fusion_arms.py  granularity.py  instrument.py  introspect.py  isolation.py  libnode.py  multinest.py  normalize.py  offload.py  optimize.py  optimizers.py  pass_lower.py  policy.py  predictive.py  region_arms.py  report.py  session.py  split_unsupported.py  strategies.py  sweep.py  (+5 more)
nestforge/perf/: __init__.py  calloverhead.py  crosslang_xl.py  flags.py  harness.py  pluto_lane.py  render_axes.py  staticlib_overhead.py  support_matrix.py  tsvc_arena.py  tsvc_full.py
perf/: README_tsvc_full.md  daint_all.sh  daint_all_smoke.sh  plot_calloverhead.py  plot_common.py  plot_framework_speedup.py  plot_overhead.py  plot_speedup_matrix.py  plot_vectorization.py  plot_winners.py  submit_all.sh
perf/debug_clang_omp/: clang_omp_libomp.sh
prototypes/gpu_stream_interop/: .gitignore  README.md  acc_add1.f90  build.sh  cublas_leg.cu  cuda_check.h  cuda_scale.cu  driver.cpp  driver_control.cpp  omp_leg.c  omp_probe.cpp
samples/: maximal_parallelism_reduction.md
scripts/: census.py  check_headers.py  check_large_files.py  dev.sh  format.sh  import_native_baselines.py  overhead_baseline.py  run_experiments.py  setup_apt.sh  setup_env.sh  setup_spack.sh
skills/agent-graph/: SKILL.md
skills/phase1-fusion/: SKILL.md
skills/phase2-offload/: SKILL.md
skills/phase3-optimize/: SKILL.md
skills/phase4-feedback/: SKILL.md
tests/: test_abi_order.py  test_arena.py  test_arena_runtime_wiring.py  test_audit_wave2.py  test_baselines.py  test_blas_libnode_emit.py  test_build.py  test_calloverhead.py  test_conditional_emit.py  test_corpus_emit.py  test_device_profile.py  test_differential.py  test_discovery.py  test_driver_contracts.py  test_emit_latent.py  test_emit_vs_sdfg_e2e.py  test_entry_contract.py  test_experiment_e1.py  test_experiment_e2.py  test_experiment_e3.py  test_experiment_e4.py  test_experiment_e5.py  test_experiment_tables.py  test_extract.py  test_feedback.py  test_fission_arms.py  test_forced_floor_normalization.py  test_fork_openmp_safety.py  test_full_data.py  test_fusion_arms.py  test_fusion_fuzz.py  test_fusion_invariant_scalar.py  test_fusion_strategy.py  test_gramschmidt_fma.py  test_granularity.py  test_index_fills.py  test_instrument.py  test_introspect.py  test_libnode_emit.py  test_libnode_numpy_ops.py  (+39 more)
tests/data/experiments/: e1.json  e2.json  e3.json  e4.json  e5.json
