[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-forge"
version = "0.0.1"
description = "Extract DaCe loop-/map-nests and offload them to external compilers via a compile-and-race arena."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yakup Budanaz", email = "budanaz.yakup@gmail.com" }]
keywords = ["dace", "sdfg", "loop-nest", "code-generation", "compilers", "autotuning", "benchmarking", "hpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Every PyPI-resolvable module-level import of the `nestforge` package. sympy belongs HERE, not in the
# `dev` extra where it used to sit: nestforge/emit_numpy.py imports it at module level, so it is needed
# to import the package at all.
#
# `dace` and `optarena` are deliberately ABSENT even though nestforge imports both, because a bare name
# resolves to the wrong thing:
#   optarena -- never published to PyPI, so listing it made `pip install -e .` fail outright with
#               "No matching distribution found for optarena". Nothing caught this because CI installs
#               the two checkouts editable and then runs pytest from the repo root, never `-e .`.
#   dace     -- nest-forge needs the `extended` branch (2.0.0a4) for the extended-only passes it calls
#               (e.g. dace.transformation.interstate.expand_nested_sdfg_inputs). PyPI's `dace` tops out
#               at 1.0.2, so a bare `dace` silently installs a wheel that cannot run this package.
# Both are installed EDITABLE from their sibling checkouts -- which is also what pins dace to `extended`:
#   pip install -r requirements-dev.txt
# A PEP 508 direct reference (`dace @ git+https://github.com/spcl/dace.git@extended`) would resolve, but
# is worse than omitting it: pip treats a git URL as unsatisfied by a local editable install and would
# reinstall dace from git over the ../dace checkout that is the whole point of developing against it.
dependencies = ["numpy", "pyyaml", "sympy"]

[project.optional-dependencies]
# The pip-installable dev/test/format tools -- the single source of truth for them; requirements-dev.txt
# installs this extra rather than restating it. The editable `dace`/`optarena` checkouts are NOT here
# (they are paths, not PyPI deps) -- see the comment above and requirements-dev.txt.
dev = [
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
    # perf/plot_*.py render the driver JSON to PNG/CSV (Agg backend, headless). Test-only: the plot
    # scripts live outside the nestforge package, so importing nestforge never needs matplotlib.
    "matplotlib",
    # PINNED: yapf's wrapping heuristics change between releases, so an unpinned yapf makes the CI
    # format gate fail on a machine whose yapf differs from the one the tree was formatted with.
    "yapf==0.43.0",
    # Not part of scripts/format.sh or the CI format gate (both are yapf + clang-format); ruff is the
    # lint pass, configured under [tool.ruff] below and run pre-commit.
    "ruff",
    "clang-format",
]

[project.urls]
Homepage = "https://github.com/spcl/NestForge"
Repository = "https://github.com/spcl/NestForge"

[tool.setuptools.packages.find]
include = ["nestforge*"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
markers = [
    "integration: needs a vendor compiler (nvc/icx/icpx) or a heavy launcher not present on the CI runner",
    "e2e: end-to-end -- compiles and runs, but only with g++/clang++, so it DOES run on the CI runner",
]

[tool.yapf]
column_limit = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Tests legitimately: guard the module with a skipif/pytestmark before imports (E402), use lambda
# helpers (E731), and single-letter math names matching the reference (E741).
"tests/*" = ["E402", "E731", "E741"]
