[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nest-forge"
version = "0.0.1"
description = "Extract DaCe loop-/map-nests and offload them to external compilers via a compile-and-race arena."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yakup Budanaz", email = "budanaz.yakup@gmail.com" }]
keywords = ["dace", "sdfg", "loop-nest", "code-generation", "compilers", "autotuning", "benchmarking", "hpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Every PyPI-resolvable module-level import of `nestforge`. `dace` and `hpcagent_bench` are deliberately
# ABSENT although nestforge imports both: hpcagent_bench is not on PyPI at all (listing it makes `pip install
# -e .` fail), and PyPI's `dace` tops out at 1.0.2 while nest-forge needs the `extended` branch. Both
# come from requirements-dev.txt as editable sibling checkouts. A PEP 508 git URL is worse than omitting
# them -- pip treats it as unsatisfied by a local editable and reinstalls over the checkout.
dependencies = ["numpy", "pyyaml", "sympy"]

[project.optional-dependencies]
# Single source of truth for the dev/test/format tools; requirements-dev.txt installs this extra.
dev = [
    "pytest",
    "pytest-timeout",
    "pytest-xdist",
    # perf/plot_*.py only -- outside the package, so importing nestforge never needs it
    "matplotlib",
    # PINNED: yapf's wrapping changes between releases, so an unpinned one fails the CI format gate
    "yapf==0.43.0",
    # the lint pass ([tool.ruff] below); the format gate is yapf + clang-format only
    "ruff",
    "clang-format",
]

[project.urls]
Homepage = "https://github.com/spcl/NestForge"
Repository = "https://github.com/spcl/NestForge"

[tool.setuptools.packages.find]
include = ["nestforge*"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
markers = [
    "integration: needs a vendor compiler (nvc/icx/icpx) or a heavy launcher not present on the CI runner",
    "e2e: end-to-end -- compiles and runs, but only with g++/clang++, so it DOES run on the CI runner",
]

[tool.yapf]
column_limit = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Tests legitimately: guard the module with a skipif/pytestmark before imports (E402), use lambda
# helpers (E731), and single-letter math names matching the reference (E741).
"tests/*" = ["E402", "E731", "E741"]
